--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon projet, Aceuil</title>
+    <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 </head>
 <body>
+    <header class="header">
+        <div class="logo">
+            <a href="index.html">logo</a>
+        </div>
+        <nav class="nav">
+            <a href="">service</a>
+            <a href="">about</a>
+            <a class="active" href="">projet</a>
+            <a href="">contact</a>
+        </nav>
+        <div class="social">
+            <a href=""><img src="img/icon-facebook.svg" alt="image facebook"></a>
+            <a href=""><img src="img/icon-instagram.svg" alt="image instagram"></a>
+            <a href=""><img src="img/icon-twitter.svg" alt="image twitter"></a>
+            <a href=""><img src="img/icon-pinterest.svg" alt="image pinterest"></a>
+        </div>
+    </header>
     
 </body>
 </html>
