ajout d'une baniere html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a href=""><img src="img/icon-pinterest.svg" alt="image pinterest"></a>
         </div>
     </header>
+    <div class="barniere"></div>
     
 </body>
 </html>
