ajout du footer et du main

--- a/index.html
+++ b/index.html
@@ -28,6 +28,33 @@
         </div>
     </header>
     <div class="barniere"></div>
+    <main class="main">
+        <h1 class="title_information">nos informations</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit et, nulla esse vitae fugit veniam repellat quaerat sapiente molestiae modi qui laboriosam, molestias consequatur eos cupiditate accusantium reprehenderit dolores ut?
+        Totam eum dignissimos quaerat harum rerum enim iure, corporis animi, minus recusandae unde dolore blanditiis consequatur! Porro sunt, explicabo vel quas repudiandae harum, perferendis officiis iste autem laborum, voluptatem accusantium?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptatem sed, natus quidem ullam nostrum aperiam nesciunt illum perspiciatis consectetur sunt reprehenderit aut quis, omnis amet. Ab voluptatibus maxime quibusdam?
+        Nihil aspernatur neque a voluptatem dolore nobis cumque eligendi odit numquam deserunt quaerat magnam aperiam, temporibus exercitationem minima unde perferendis accusamus eos autem porro ea sit ad soluta magni. Neque!
+        Est corrupti magni saepe voluptates libero dolores, rerum molestiae tempora pariatur odio illo assumenda laborum repudiandae quisquam velit animi et rem. Ipsam exercitationem temporibus quis, ipsa numquam eveniet! Et, suscipit!
+        Minus molestiae id aliquam voluptate iusto, mollitia necessitatibus. Cupiditate fugit obcaecati quo consequuntur cumque? Consequatur, beatae in odit dicta, repudiandae optio, voluptates possimus eaque natus explicabo nihil voluptatum? Repellat, optio.</p>
+        <article class="main_article">
+            <img src="img/image-gallery-milkbottles.jpg" alt="">
+            <img src="img/image-gallery-cone.jpg" alt="">
+            <img src="img/image-gallery-orange.jpg" alt="">
+            <img src="img/image-gallery-sugarcubes.jpg" alt="">
+        </article>
+    </main>
+    <footer class="footer">
+        <div class="social">
+            <a href=""><img src="img/icon-facebook.svg" alt="image facebook"></a>
+            <a href=""><img src="img/icon-instagram.svg" alt="image instagram"></a>
+            <a href=""><img src="img/icon-twitter.svg" alt="image twitter"></a>
+            <a href=""><img src="img/icon-pinterest.svg" alt="image pinterest"></a>
+        </div>
+        <p>
+            &copy;2025 obed &nbsp;<span>mansiangi</span>
+        </p>
+
+    </footer>
     
 </body>
 </html>
